--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ant-design/icons": "^5.6.0",
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^3.5.1",
+    "@chakra-ui/tooltip": "^2.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -33,6 +34,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
