--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "drizzle-orm": "^0.33.0",
     "framer-motion": "^12.0.6",
     "geist": "^1.3.0",
