--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^3.6.0",
     "@chakra-ui/tooltip": "^2.3.1",
+    "@clerk/nextjs": "^6.11.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
